[package]
name = "rgl"
version = "0.3.0"
authors = ["Matthew Hopson", "Beyley Thomas"]
license = "MIT OR Apache-2.0"
description = "Safe thin wrapper for OpenGL using the gl-rs crate"
repository = "https://github.com/Beyley/rusty-gl"
readme = "README.md"
documentation = "https://docs.rs/rgl"

[dependencies]
gl = "0.14.0"